Nan imputation file updated

--- a/NaN_imputation.ipynb
+++ b/NaN_imputation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#GLOBAL VARIABLES\n",
     "# Define the programmer whose path you want to use\n",
-    "programmer = 'patricia'\n",
+    "programmer = 'esther'\n",
     "\n",
     "#variables for paths names\n",
     "file_paths_names = {\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      99.000000\n",
+       "mean     1016.131313\n",
+       "std      1106.144865\n",
+       "min         0.000000\n",
+       "50%       299.000000\n",
+       "75%      1966.000000\n",
+       "85%      2409.500000\n",
+       "99%      3606.500000\n",
+       "max      3827.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#describe the missing value distribution. \n",
+    "initial_df.isna().sum().describe(percentiles=[.75, .85, .99])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,27 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RecordID         0\n",
-       "Age              0\n",
-       "Gender           0\n",
-       "Height           0\n",
-       "ICUType          0\n",
-       "                ..\n",
-       "WBC_mad          0\n",
-       "WBC_slope        0\n",
-       "Weight_median    0\n",
-       "Weight_mad       0\n",
-       "Weight_slope     0\n",
-       "Length: 119, dtype: int64"
+       "RecordID           0\n",
+       "Age                0\n",
+       "Gender             0\n",
+       "ICUType            0\n",
+       "BMI                0\n",
+       "                  ..\n",
+       "WBC_median         0\n",
+       "WBC_mad            0\n",
+       "WBC_slope          0\n",
+       "Weight_24median    0\n",
+       "Weight_mad         0\n",
+       "Length: 99, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +175,6 @@
    "outputs": [],
    "source": [
     "# merge the imputed dataframe with the outcomes on each patient ID\n",
-    "\n",
     "KNN_imputed_df = pd.merge(KNN_imputed_df, outcomes_df, on='RecordID')"
    ]
   },
@@ -202,7 +231,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> METHOD 2 - PCA (Principal Comopnent Analysis)"
+    "<b> METHOD 2 - Imputing NaN values with -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing values after imputation: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Impute all missing values with -1\n",
+    "minus1_imputed_df = initial_df.fillna(-1)\n",
+    "\n",
+    "# Check if there are any remaining missing values\n",
+    "print(\"Number of missing values after imputation:\", minus1_imputed_df.isna().sum().sum())\n"
    ]
   },
   {
@@ -211,13 +261,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# save the new dataframe\n",
+    "minus1_imputed_df.to_csv(os.path.join(file_path_to_save, \"minus1_imputed_df.csv\"), index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -231,9 +282,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
