Nan imputation modified, PCA module created and XgBoost created

--- a/NaN_imputation.ipynb
+++ b/NaN_imputation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,35 +54,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "#features importation\n",
-    "initial_df = pd.read_csv(os.path.join(file_path_to_save, 'clean_dataframe_with_NaN.csv'))"
+    "initial_df = pd.read_csv(os.path.join(file_path_to_save, 'clean_dataframe_with_NaN.csv'))\n",
+    "initial_df.drop(['MechVent_start'], inplace=True, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count      99.000000\n",
-       "mean     1016.131313\n",
-       "std      1106.144865\n",
+       "count      98.000000\n",
+       "mean      996.295918\n",
+       "std      1093.991794\n",
        "min         0.000000\n",
-       "50%       299.000000\n",
+       "50%       292.000000\n",
        "75%      1966.000000\n",
-       "85%      2409.500000\n",
-       "99%      3606.500000\n",
+       "85%      2402.000000\n",
+       "99%      3608.750000\n",
        "max      3827.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,8 @@
     "df_target_a = pd.read_csv(os.path.join(files_outcome_path, \"Outcomes-a.txt\"))\n",
     "df_target_b = pd.read_csv(os.path.join(files_outcome_path, \"Outcomes-b.txt\"))\n",
     "\n",
-    "outcomes_df = pd.concat([df_target_a, df_target_b], ignore_index=True).drop(columns=['SAPS-I', 'SOFA', 'Survival'])\n"
+    "outcomes_df = pd.concat([df_target_a, df_target_b], ignore_index=True).drop(columns=['SAPS-I', 'SOFA', 'Survival'])\n",
+    "outcomes_df['In-hospital_death'] = outcomes_df['In-hospital_death'].astype(int)"
    ]
   },
   {
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -148,10 +150,10 @@
        "WBC_slope          0\n",
        "Weight_24median    0\n",
        "Weight_mad         0\n",
-       "Length: 99, dtype: int64"
+       "Length: 98, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,17 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge the imputed dataframe with the outcomes on each patient ID\n",
+    "KNN_imputed_df[\"ICUType\"] = KNN_imputed_df[\"ICUType\"].astype(int)\n",
+    "KNN_imputed_df[\"Gender\"] = KNN_imputed_df[\"Gender\"].astype(int)\n",
+    "KNN_imputed_df[\"MechVent\"] = KNN_imputed_df[\"MechVent\"].astype(int)\n",
     "KNN_imputed_df = pd.merge(KNN_imputed_df, outcomes_df, on='RecordID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -257,11 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the new dataframe\n",
+    "# merge the imputed dataframe with the outcomes on each patient ID\n",
+    "minus1_imputed_df[\"ICUType\"] = minus1_imputed_df[\"ICUType\"].astype(int)\n",
+    "minus1_imputed_df[\"Gender\"] = minus1_imputed_df[\"Gender\"].astype(int)\n",
+    "minus1_imputed_df[\"MechVent\"] = minus1_imputed_df[\"MechVent\"].astype(int)\n",
+    "minus1_imputed_df = pd.merge(minus1_imputed_df, outcomes_df, on='RecordID')\n",
     "minus1_imputed_df.to_csv(os.path.join(file_path_to_save, \"minus1_imputed_df.csv\"), index=False)"
    ]
   }
